<resources>
    <string name="app_name">Sqlite_Example</string>
    <string name="action_settings">Settings</string>
    <string name="s">Read Only Mode</string>
    <string name="t" />
    <string name="text">Maximum Notes</string>
    <string name="b">SAVE</string>
    <string name="pt" />
    <string name="pt1">Enter Note</string>
    <string name="bt">Close</string>
    <string name="bt2">Save</string>
    <string name="bt3">Delete</string>
</resources>
