<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.akshay.sqlite_example.Settings_Activity">

    <Switch
        android:id="@+id/swRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/s"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/sbMax"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:max="100"
        android:progress="3" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="btnsave_click"
        android:text="@string/b" />

    </LinearLayout>


    <!--</android.support.constraint.ConstraintLayout>-->

